gitops/infra/onprem/proxy/medfish/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  labels:
    app: sonarr
  namespace: onprem-proxy
spec:
  type: ExternalName
  externalName: 10.0.1.3
  ports:
  - name: http
    port: 8989
