gitops/infra/onprem/proxy/medfish/sonarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: onprem-proxy
spec:
  ingressClassName: nginx-internal
  rules:
  - host: sonarr.int.konst.fish
    http:
      paths:
      - backend:
          service:
            name: sonarr
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
